19813
worked in 2.9.3, has been broken since at least 2.10.5, remains broken in 2.11.7 and 2.12.0-M2:

{noformat}
Welcome to Scala version 2.10.5 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_65).

scala> :power
** Power User mode enabled - BEEP WHIR GYVE **
** :phase has been set to 'typer'.          **
** scala.tools.nsc._ has been imported      **
** global._, definitions._ also imported    **
** Try  :help, :vals, power.<tab>           **

scala> """3"""
<console>:5: error: ';' expected but integer literal found.
  def $line  = """"""3"""""";
                     ^
{noformat}

it's especially annoying that it doesn't work with quasiquotes, either, which is exactly the thing you're likeliest to want triple quote for in power mode
